--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--Person Table View Controller-->
         <scene sceneID="Q1A-LG-XYy">
             <objects>
-                <tableViewController id="G9Q-Iu-VZl" sceneMemberID="viewController">
+                <tableViewController id="G9Q-Iu-VZl" customClass="PersonTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="6TA-lw-x8G">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -24,37 +24,39 @@
                                     <rect key="frame" x="0.0" y="0.0" width="383" height="80"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WQH-ck-gSv">
-                                            <rect key="frame" x="9" y="11" width="105" height="58"/>
+                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="cfc-Pu-rqI">
+                                            <rect key="frame" x="10" y="11" width="363" height="58"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wFt-kj-C74">
-                                                    <rect key="frame" x="0.0" y="0.0" width="98" height="58"/>
-                                                </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WQH-ck-gSv">
+                                                    <rect key="frame" x="0.0" y="0.0" width="105" height="58"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wFt-kj-C74">
+                                                            <rect key="frame" x="0.0" y="0.0" width="98" height="58"/>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="WQH-ck-gSv" secondAttribute="height" multiplier="105:58" id="2uS-7p-73s"/>
+                                                        <constraint firstItem="wFt-kj-C74" firstAttribute="centerY" secondItem="WQH-ck-gSv" secondAttribute="centerY" id="Nii-95-kao"/>
+                                                        <constraint firstItem="wFt-kj-C74" firstAttribute="top" secondItem="WQH-ck-gSv" secondAttribute="top" id="Vh2-QH-8nV"/>
+                                                        <constraint firstAttribute="trailing" secondItem="wFt-kj-C74" secondAttribute="trailing" constant="7" id="biH-qu-3yD"/>
+                                                        <constraint firstItem="wFt-kj-C74" firstAttribute="leading" secondItem="WQH-ck-gSv" secondAttribute="leading" id="usU-AI-m0V"/>
+                                                    </constraints>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oGV-4e-bvT">
+                                                    <rect key="frame" x="115" y="0.0" width="248" height="58"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
-                                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" secondItem="WQH-ck-gSv" secondAttribute="height" multiplier="105:58" id="2uS-7p-73s"/>
-                                                <constraint firstItem="wFt-kj-C74" firstAttribute="centerY" secondItem="WQH-ck-gSv" secondAttribute="centerY" id="Nii-95-kao"/>
-                                                <constraint firstItem="wFt-kj-C74" firstAttribute="top" secondItem="WQH-ck-gSv" secondAttribute="top" id="Vh2-QH-8nV"/>
-                                                <constraint firstAttribute="trailing" secondItem="wFt-kj-C74" secondAttribute="trailing" constant="7" id="biH-qu-3yD"/>
-                                                <constraint firstItem="wFt-kj-C74" firstAttribute="leading" secondItem="WQH-ck-gSv" secondAttribute="leading" id="usU-AI-m0V"/>
-                                            </constraints>
-                                        </view>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oGV-4e-bvT">
-                                            <rect key="frame" x="124" y="22" width="231" height="36"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="oGV-4e-bvT" firstAttribute="top" secondItem="S6g-kx-DpB" secondAttribute="topMargin" constant="11" id="IA9-ra-Rg0"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="oGV-4e-bvT" secondAttribute="trailing" constant="20" id="L9U-Et-EVV"/>
-                                        <constraint firstItem="oGV-4e-bvT" firstAttribute="leading" secondItem="WQH-ck-gSv" secondAttribute="trailing" constant="10" id="k1Q-qq-jKi"/>
-                                        <constraint firstAttribute="bottom" secondItem="WQH-ck-gSv" secondAttribute="bottom" constant="11" id="kKG-EO-mrP"/>
-                                        <constraint firstItem="WQH-ck-gSv" firstAttribute="leading" secondItem="S6g-kx-DpB" secondAttribute="leading" constant="9" id="mYA-fj-t5r"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="oGV-4e-bvT" secondAttribute="bottom" constant="11" id="npf-j9-aVY"/>
-                                        <constraint firstItem="WQH-ck-gSv" firstAttribute="top" secondItem="S6g-kx-DpB" secondAttribute="top" constant="11" id="wbY-3T-NBH"/>
+                                        <constraint firstItem="cfc-Pu-rqI" firstAttribute="top" secondItem="S6g-kx-DpB" secondAttribute="top" constant="11" id="HoV-Lp-FhQ"/>
+                                        <constraint firstAttribute="trailing" secondItem="cfc-Pu-rqI" secondAttribute="trailing" constant="10" id="azc-Kz-NrN"/>
+                                        <constraint firstItem="cfc-Pu-rqI" firstAttribute="leading" secondItem="S6g-kx-DpB" secondAttribute="leading" constant="10" id="feQ-cs-XOT"/>
+                                        <constraint firstAttribute="bottom" secondItem="cfc-Pu-rqI" secondAttribute="bottom" constant="11" id="mCE-s7-dhg"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
