--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -31,7 +31,7 @@
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wz6-lZ-ADg">
-                                            <rect key="frame" x="106" y="27" width="288" height="21"/>
+                                            <rect key="frame" x="106" y="20" width="288" height="35"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -43,6 +43,7 @@
                                         <constraint firstItem="33o-cG-sk3" firstAttribute="top" secondItem="jQX-tp-Ppy" secondAttribute="top" constant="10" id="U5P-pa-ba5"/>
                                         <constraint firstItem="wz6-lZ-ADg" firstAttribute="centerY" secondItem="33o-cG-sk3" secondAttribute="centerY" id="h8M-ju-See"/>
                                         <constraint firstItem="33o-cG-sk3" firstAttribute="leading" secondItem="jQX-tp-Ppy" secondAttribute="leading" constant="20" id="hCy-af-cdd"/>
+                                        <constraint firstItem="wz6-lZ-ADg" firstAttribute="top" secondItem="jQX-tp-Ppy" secondAttribute="top" constant="20" id="xEl-he-VrI"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <constraints>
